re PR middle-end/29478 (optimization generates warning for casts)

* gcc.dg/tree-ssa/loadpre8.c: Disable inlining.
	* gcc.dg/tree-ssa/pr27236.c: Likewise.
	* gcc.dg/tree-ssa/predcom-1.c: Likewise.
	* gcc.dg/tree-ssa/predcom-2.c: Likewise.
	* gcc.dg/tree-ssa/flatten-2.c: Avoid overactive tail call ellim.
	* gcc.dg/tree-ssa/loadpre5.c: Likewise.
	* gcc.dg/vect/costmodel/i386/costmodel-fast-math-vect-pr29925.c:
	Likewise.
	* invoke.texi (-finline-small-functions): Document.
	* ipa-inline.c (cgraph_default_inline_p): Do not use DECL_INLINE
	when deciding what is inlinable.
	(cgraph_decide_recursive_inlining): Handle flag_inline_functions.
	(cgraph_decide_inlining_of_small_function): Handle new flags.
	(cgraph_decide_inlining_incrementally): Likewise.
	* opts.c (decode_options): Enable flag_inline_small_functions at -O2
	* common.opt (finline-small-functions): New.
	* Makefile.in (build/gengtype.o-warn): Work around PR29478

From-SVN: r128092